--- a/src/components/TodoDashboard/TodoDashboard.css
+++ b/src/components/TodoDashboard/TodoDashboard.css
@@ -1,11 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-color: floralwhite;
-}
 
 header {
     padding: 10px 40px;
@@ -80,38 +72,11 @@ ul {
     cursor: pointer;
 }
 
-.save-btn,
-.cancel-btn {
-    padding: 10px;
+.center {
+    text-align: center;
     font-size: 20px;
-    border: 2px solid;
-    background-color: transparent;
-    border-radius: 0 10px 10px 0;
-    font-weight: 900;
-    border-left: none;
-    cursor: pointer;
 }
 
-.save-btn {
-    border-radius: 0;
-    color: #e38f30;
-}
-
-.save-btn:disabled {
-    opacity: .6;
-    cursor: not-allowed;
-}
-
-.cancel-btn {
-    color: gray;
-    border-color: gray;
-}
-
-.add-item-wrapper {
-    display: flex;
-    width: 100%;
-    margin: 30px 0;
-}
 
 @media screen and (max-width: 768px) {
     .wrapper {
