--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -24,11 +24,19 @@ input[type="checkbox"] {
     flex: 1;
 }
 
-.delete-btn {
+.btn {
     padding: 3px 10px;
     background-color: transparent;
-    border: 1px solid red;
+    border: 1px solid;
     border-radius: 10px;
-    color: red;
     cursor: pointer;
+}
+
+.btn:disabled {
+    cursor: not-allowed;
+    opacity: .6;
+}
+
+.btn-wrapper{
+    width: auto !important;
 }
