Removed dublicates of code Fixed templates

--- a/src/modals/FormTodoModal/FormTodoModal.css
+++ b/src/modals/FormTodoModal/FormTodoModal.css
@@ -7,7 +7,7 @@
     color: darkslategray;
 }
 
-.content-wrapper {
+.form-wrapper {
     gap: 20px;
     display: flex;
     flex-direction: column;
