--- a/src/modals/FormTodoModal/FormTodoModal.css
+++ b/src/modals/FormTodoModal/FormTodoModal.css
@@ -7,11 +7,21 @@
     color: darkslategray;
 }
 
+textarea {
+    resize: none;
+    font-family: Arial;
+}
+
 .form-wrapper {
-    gap: 20px;
+    gap: 10px;
     display: flex;
     flex-direction: column;
 
     align-items: stretch;
     width: 100%;
+}
+
+label {
+    font-weight: 600;
+    color: gray;
 }
